--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.container{
+    text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Error{
+    font-weight: 700;
+    font-family: Arial, Helvetica, sans-serif;
+    color: red;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.modal_btn{
+    position: absolute;
+    padding: 5px 20px;
+    border-radius: 4px;
+    cursor: pointer;
+    top: 20px;
+    right: 100px;
+    background-color: #2eec71;
+    color: white;
+    font-weight: bolder;
+    border: 2px solid #2eec71;
+    transition: 0.2s linear;
 }
+.modal_btn:hover{
+    border-color: #2eec71;
+    background-color: white;
+    opacity: 0.6;
+    color: black;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
